Updated tex files

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -1,4 +1,4 @@
-\documentclass{elsarticle}
+\documentclass[final]{elsarticle}
 %\usepackage[pdftex,breaklinks,linktocpage,pagebackref,hyperindex,hyperfigures]
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
