--- a/paper/tex/introduction.tex
+++ b/paper/tex/introduction.tex
@@ -5,9 +5,10 @@
 The level-set method, originally proposed by Sethian and Osher \fcite{classic LS paper}, is a popular and powerful framework for tracking arbitrary interfaces that undergo complicated topological changes. As a result, the level-set method has wide range of application such as multiphase flows, moving boundary problems, imgae segmentation, and computer graphics graphics, to only name a few \fcite{fedkiw/osher book, sethian book}.
 
 \item \textbf{What are the main issues of using level-set method?}
-What makes level-set method powerful and easy to use is that in this method location of the interface is defined implicitly on an underlying grid. This conveninvce, however, comes at a price. First, compared to an explicit method, e.g. front tracking \fcite{front trcking refs}, level-set method is typically less accurate and mass conservation could be a problem although progress has been made in resolving this issue \fcite{Enright/Fedkiw paper, other?}. Second, the level-set function has to be defined in a higher dimentional space compared to the interface. If only the location of interface is needed, the added dimension greatly increases the overall computational cost. This problem, however, could be handled by computing the level-set only close to the interface, e.g. as in the narrow-band level-set method \fcite{narrow band, the hash table paper?}.
+What makes level-set method powerful and easy to use is that in this method location of the interface is defined implicitly on an underlying grid. This convenience, however, comes at a price. First, compared to an explicit method, e.g. front tracking \fcite{front tracking refs}, level-set method is typically less accurate and mass conservation could be a problem although progress has been made in resolving this issue \fcite{Enright/Fedkiw paper, other?}. Second, the level-set function has to be defined in a higher dimensional space compared to the interface. If only the location of interface is needed, the added dimension greatly increases the overall computational cost. This problem, however, could be handled by computing the level-set only close to the interface, e.g. as in the narrow-band level-set method \fcite{narrow band, the hash table paper?}.
 
 \item \textbf{Why using AMR helps? How do we plan to extend that paper here? What are the challenges?}
+Another approach that can address both problems is the use of local grid refinement. In \fcite{Frederic paper}, authors present second-order accurate level-set methods on Cartesian Quadtree (two dimensions) and Octree (three dimensions) grids. Use of tree-based Cartesian adaptive grids in the context of level-set method is quite advantageous because 1) It gives fine-grain control over error, which typically occurs close to the interface, 2) It can effectively reduce the dimensionality of the problem by focusing most of the cells close to the interface, and 3) Construction and handling of the tree is quite simple in the presence of an interface which defines a an ideal metric for refinement.
 
 \item \textbf{Parallel octrees review: p4est, octor, dendro, etc.}
 
