--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -51,7 +51,7 @@
 \newcommand{\divg}[1]{\nabla \cdot \left(#1\right)}
 \newcommand{\ddivg}[1]{\nabla \cdot #1}
 \newcommand{\non}{\nonumber}
-\newcommand{\fcite}[1]{(\textcolor{red}{cite: #1})}
+\newcommand{\fcite}[1]{(\textcolor{blue}{cite: #1})}
 \newtheorem{property}{Property}
 
 \begin{document}
