updated citation format

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -74,6 +74,7 @@
 \input{conclusion}
 
 \bibliographystyle{plain}
-\addcontentsline{toc}{section}{\refname}\bibliography{references}
+\addcontentsline{toc}{section}{\refname}
+\bibliography{/home/guittet/code/CASL_Library/references.bib}
 
 \end{document}
