--- a/paper/tex/levelset_method.tex
+++ b/paper/tex/levelset_method.tex
@@ -24,7 +24,7 @@ where it should be noted that $\lvert \nabla \phi \rvert = 1$ when the level-set
 
 \section{The \texttt{p4est} library}
 
-The work we present relies on the parallel octree library \texttt{p4est} \cite{burstedded:2011:p4est}. It is scalable implementation of the general octree structure in a massively parallel mpi environment. We limit our presentation of \texttt{p4est} to the relevant information for our application, for more details the reader is invited to read the original article \cite{burstedded:2011:p4est}.
+The work we present relies on the parallel octree library \texttt{p4est} \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}. It is scalable implementation of the general octree structure in a massively parallel mpi environment. We limit our presentation of \texttt{p4est} to the relevant information for our application, for more details the reader is invited to read the original article \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
 
 The \texttt{p4est} library provides the geometrical information for the leaves of an octree which includes the neighboring information for the leaves (called quadrants in the original article) of the tree, a layer of ghost quadrants and ghost vertices for each process, the coarsening and refining procedures, and encapsulates the communication between processes. However, it does not provide the vertical structure of the octrees. If it is generally unnecessary, it is a desirable feature for a finite differences based code as it speeds up the access to arbitrary quadrants information dramatically. Thus, we choose to reconstruct the local vertical structure of the octree on every processes. Note that given the local and ghost layer information, this is an entirely local procedure and no communication is needed.
 
