--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -28,9 +28,9 @@ The first important step to build a level-set based code is to provide an interp
 
 \subsection{Reinitialization and extensions} \label{section::reinitialization}
 
-The reinitialization procedure transforms an arbitrary function into a signed distance function to its zero contour. One of the popular methods to achieve this results is to solve the reinitialization equation \ref{eq::reinitialization} \cite{Sussman:1994:levelsetincompressible, Min_Gibou:2007:Level_Set_Adaptive}. Other methods, such as the Fast Sweeping \cite{??} and the Fast Marching methods \cite{Sethian:1996:FMM, chopp:2001:fmm}, are based on the wave propagation nature of the reinitialization front and provide faster implementations of the reinitialization procedure in a serial environment. However, their parallelization is an involved process and we opt for solving the reinitialization equation.
+The reinitialization procedure transforms an arbitrary function into a signed distance function to its zero contour. One of the popular methods to achieve this results is to solve the reinitialization equation \ref{eq::reinitialization} \cite{Sussman;Smereka;Osher:94:A-Level-Set-Approach, Min;Gibou:07:A-second-order-accur}. Other methods, such as the Fast Sweeping \cite{Zhao:04:A-Fast-Sweeping-Meth} and the Fast Marching methods \cite{Sethian:96:A-Fast-Marching-Leve, Chopp:01:Some-improvements-of}, are based on the wave propagation nature of the reinitialization front and provide faster implementations of the reinitialization procedure in a serial environment. However, their parallelization is an involved process and we opt for solving the reinitialization equation.
 
-We base our approach on Min and Gibou \cite{Min_Gibou:2007:Level_Set_Adaptive} and discretize the reinitialization equation as
+We base our approach on Min and Gibou \cite{Min;Gibou:07:A-second-order-accur} and discretize the reinitialization equation as
 
 \begin{equation*}
 \frac{d\phi}{d\tau} + \mathrm{sign}(\phi^0)[H_G(D^+_x\phi, D^-_x\phi, D^+_y\phi, D^-_y\phi)-1] = 0,
@@ -46,7 +46,7 @@ H_G(a,b,c,d) =
 \end{cases}
 \end{equation*}
 
-with $a^+=\max(a,0)$ and $a^-=\min(a,0)$. The one-sided derivatives $D^{+/-}_{x/y}\phi$ are discretized by second order accurate finite differences as explained by Min and Gibou in \cite{Min_Gibou:2007:Level_Set_Adaptive}. Following the presentation in \cite{Min_Gibou:2007:Level_Set_Adaptive} which incorporates the subcell resolution introduced by Russo and Smereka \cite{Russo_Smereka}, we include the initial position of the interface, given by $\phi^0$, in the computation of the one sided derivatives next to the interface in order to preserve the interface location. Finally, we choose a simple Euler step for the time discretization.
+with $a^+=\max(a,0)$ and $a^-=\min(a,0)$. The one-sided derivatives $D^{+/-}_{x/y}\phi$ are discretized by second order accurate finite differences as explained by Min and Gibou in \cite{Min;Gibou:07:A-second-order-accur}. Following the presentation in \cite{Min;Gibou:07:A-second-order-accur} which incorporates the subcell resolution introduced by Russo and Smereka \cite{Russo;Smereka:00:A-Remark-on-Computin}, we include the initial position of the interface, given by $\phi^0$, in the computation of the one sided derivatives next to the interface in order to preserve the interface location. Finally, we choose a simple Euler step for the time discretization.
 
 The general parallel algorithm for the reinitialization procedure is presented in \ref{algo::reinitialization}. For each fictitious time step, we start by computing the new value of the level-set function for the layer nodes. We then initiate the communication to update the ghost values while computing the new values for local nodes. After finishing the communication, we can then update $\phi^n$ to $\phi^{n+1}$ and move on to the next time step. The number of iterations needed for the reinitialization procedure to converge on the whole domain or on a band surrounding the interface depends on the size of the mesh, the geometry of the interface and how far from a signed distance function $\phi^0$ is. In practice, twenty iterations provide reasonable results for the applications we present.
 
